--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -540,6 +540,8 @@ section {
   background: url("../img/me.jpg") center center no-repeat;
   background-size: cover;
   min-height: 400px;
+  border-radius: 10%;
+
 }
 
 @media (max-width: 991px) {
