--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,7 +335,39 @@ h6 {
   background-size: cover;
 
 
+
   padding: 0 15px;
+}
+
+.bgImage {
+  width: 100%;
+  height: 50%;
+  background: url("../img/laptop.jpg");
+  background-size: cover;
+
+
+
+
+
+}
+
+
+.bg-text {
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+
+  border: 10px solid #f1f1f1;
+
+  /* Stay fixed */
+
+
+  z-index: 2;
+
+
 }
 
 #hero h1 {
